# sendit

./: .gitignore  README.md  pyproject.toml  run.py  run_web.py  sendit-linux-x86_64.spec  sendit.spec  test_e2e.py
.github/workflows/: build.yml
sendit/: __init__.py  __main__.py  _common.py  cli.py  cli_web.py  client.py  progress.py  qr.py  serve.py  server.py
sendit-android/: settings.gradle.kts
sendit-android/app/: build.gradle.kts
sendit-android/app/src/main/: AndroidManifest.xml
sendit-android/app/src/main/assets/: .gitkeep
sendit-android/app/src/main/java/com/sendit/app/: MainActivity.kt  SenditService.kt
sendit-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
sendit-android/app/src/main/res/layout/: activity_main.xml
sendit-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
sendit-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
sendit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
